--- a/public/index.html
+++ b/public/index.html
@@ -810,8 +810,8 @@
                             return String(text).replace(/[^\u0600-\u06FF\s0-9a-zA-Z.,:()/\-+%@=د.ع]/g, '');
                         };
 
-                        // دالة لإنشاء قسم كـ HTML
-                        const createSectionElement = (title, items, isTable = false, isSubsection = false) => {
+                        // دالة لإنشاء قسم كـ HTML كنصوص مرتبة
+                        const createSectionElement = (title, contentItems, isSubsection = false) => {
                             const section = document.createElement('div');
                             section.style.fontFamily = 'Amiri, Arial, sans-serif';
                             section.style.direction = 'rtl';
@@ -828,6 +828,7 @@
                             section.style.overflow = 'visible';
                             section.style.display = 'block';
                             section.style.visibility = 'visible';
+                            section.style.minHeight = '600px'; // ضمان ارتفاع كافٍ
 
                             if (!isSubsection) {
                                 const header = document.createElement('div');
@@ -860,47 +861,36 @@
                             content.style.background = '#FDF6E3';
                             content.style.borderRadius = '4px';
 
-                            if (isTable) {
-                                const table = document.createElement('table');
-                                table.style.width = '100%';
-                                table.style.borderCollapse = 'collapse';
-                                table.style.margin = '10px 0';
-                                table.innerHTML = `
-                                    <thead><tr><th style="border: 1px solid #DBC2A4; padding: 10px; background: #9B2D30; color: #FFF;">البند</th><th style="border: 1px solid #DBC2A4; padding: 10px; background: #9B2D30; color: #FFF;">القيمة</th></tr></thead>
-                                    <tbody>${items.map(item => `<tr><td style="border: 1px solid #DBC2A4; padding: 10px;">${sanitizeText(item[0])}</td><td style="border: 1px solid #DBC2A4; padding: 10px;">${sanitizeText(item[1])}</td></tr>`).join('')}</tbody>
-                                `;
-                                content.appendChild(table);
-                            } else {
-                                items.forEach(item => {
-                                    const p = document.createElement('p');
-                                    p.style.margin = '8px 0';
-                                    p.style.padding = '5px';
-                                    p.style.background = '#FFF';
-                                    p.style.borderRadius = '3px';
-                                    p.style.border = '1px solid #DBC2A4';
-                                    p.textContent = sanitizeText(item);
-                                    content.appendChild(p);
-                                });
-                            }
+                            contentItems.forEach(item => {
+                                const p = document.createElement('p');
+                                p.style.margin = '8px 0';
+                                p.style.padding = '5px';
+                                p.style.background = '#FFF';
+                                p.style.borderRadius = '3px';
+                                p.style.border = '1px solid #DBC2A4';
+                                p.textContent = sanitizeText(item);
+                                content.appendChild(p);
+                            });
+
                             section.appendChild(content);
-                            console.log(`قسم "${title}": عدد العناصر = ${items.length}`, items);
+                            console.log(`قسم "${title}": عدد العناصر = ${contentItems.length}`, contentItems);
                             return section;
                         };
 
-                        // دالة لتحويل قسم إلى صورة وإضافته إلى PDF
+                        // دالة لإضافة قسم إلى PDF
                         const addSectionToPDF = async (sectionElement, sectionName) => {
                             console.log(`بدء إضافة قسم "${sanitizeText(sectionName)}"`);
                             document.body.appendChild(sectionElement);
 
                             // إضافة تأخير لضمان اكتمال تحميل العناصر
-                            await new Promise(resolve => setTimeout(resolve, 200));
+                            await new Promise(resolve => setTimeout(resolve, 500));
 
                             const canvas = await html2canvas(sectionElement, {
                                 scale: 2,
                                 useCORS: true,
                                 logging: true,
                                 windowWidth: 794,
-                                windowHeight: sectionElement.scrollHeight + 300, // زيادة الهامش
+                                windowHeight: sectionElement.scrollHeight + 600, // هامش إضافي
                                 scrollX: 0,
                                 scrollY: 0,
                                 backgroundColor: '#FFF'
@@ -908,15 +898,13 @@
                             const imgData = canvas.toDataURL('image/jpeg', 0.95);
                             const imgWidth = 190;
                             const imgHeight = (canvas.height * imgWidth) / canvas.width;
-                            const pageHeight = 277;
+                            const pageHeight = 277 - 20; // هامش 20 مم
                             let position = 0;
 
                             console.log(`قسم "${sanitizeText(sectionName)}": ارتفاع الصورة ${imgHeight} مم, عدد الصفحات المتوقع ${Math.ceil(imgHeight / pageHeight)}`);
 
-                            // إضافة صفحة جديدة إذا لزم الأمر
-                            if (doc.internal.getNumberOfPages() === 0 || doc.internal.getCurrentPageInfo().pageContext.hasContent) {
-                                doc.addPage();
-                            }
+                            // إضافة صفحة جديدة لكل قسم
+                            doc.addPage();
 
                             // تقسيم الصورة عبر الصفحات
                             while (position < imgHeight) {
@@ -932,124 +920,70 @@
 
                         // 1. معلومات الشركة
                         const companyItems = [
-                            `الاسم: ${sanitizeText(pdfData.companyInfo?.name || 'غير متوفر')}`,
-                            `الوصف: ${sanitizeText(pdfData.companyInfo?.description || 'غير متوفر')}`,
-                            `الهاتف: ${sanitizeText(pdfData.companyInfo?.contact?.phone || 'غير متوفر')}`,
-                            `البريد الإلكتروني: ${sanitizeText(pdfData.companyInfo?.contact?.email || 'غير متوفر')}`,
-                            `العنوان: ${sanitizeText(pdfData.companyInfo?.contact?.address || 'غير متوفر')}`
+                            `الاسم: ${sanitizeText(pdfData.companyInfo?.name)}`,
+                            `الوصف: ${sanitizeText(pdfData.companyInfo?.description)}`,
+                            `الهاتف: ${sanitizeText(pdfData.companyInfo?.contact?.phone)}`,
+                            `البريد الإلكتروني: ${sanitizeText(pdfData.companyInfo?.contact?.email)}`,
+                            `العنوان: ${sanitizeText(pdfData.companyInfo?.contact?.address)}`
                         ];
-                        console.log('معلومات الشركة: عدد العناصر =', companyItems.length, companyItems);
-                        await addSectionToPDF(createSectionElement('معلومات الشركة', companyItems, false), 'معلومات الشركة');
+                        await addSectionToPDF(createSectionElement('معلومات الشركة', companyItems), 'معلومات الشركة');
 
                         // 2. بيانات المدخلات
-                        const inputSection = document.createElement('div');
-                        inputSection.style.fontFamily = 'Amiri, Arial, sans-serif';
-                        inputSection.style.direction = 'rtl';
-                        inputSection.style.width = '754px';
-                        inputSection.style.padding = '15px';
-                        inputSection.style.background = '#FFF';
-                        inputSection.style.border = '2px solid #C19A6B';
-                        inputSection.style.boxSizing = 'border-box';
-                        inputSection.style.position = 'absolute';
-                        inputSection.style.left = '-9999px';
-                        inputSection.style.fontSize = '14px';
-                        inputSection.style.lineHeight = '1.6';
-                        inputSection.style.margin = '10px';
-                        inputSection.style.overflow = 'visible';
-                        inputSection.style.display = 'block';
-                        inputSection.style.visibility = 'visible';
-                        inputSection.style.minHeight = '500px'; // ضمان ارتفاع كافٍ
-
-                        const inputHeader = document.createElement('div');
-                        inputHeader.style.background = '#9B2D30';
-                        inputHeader.style.color = '#FFF';
-                        inputHeader.style.padding = '12px';
-                        inputHeader.style.textAlign = 'center';
-                        inputHeader.style.borderBottom = '1px solid #C19A6B';
-                        inputHeader.innerHTML = `
-                            <h1 style="font-size: 18px; margin: 3px 0;">بيانات المدخلات</h1>
-                            <p style="font-size: 13px; margin: 3px 0;">إعداد: ${sanitizeText(pdfData.companyInfo?.name) || 'غير متوفر'}</p>
-                            <p style="font-size: 13px; margin: 3px 0;">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
-                        `;
-                        inputSection.appendChild(inputHeader);
-
-                        const customerItems = (pdfData.inputData?.customer?.fields || []).map(field => 
-                            field.label ? `${sanitizeText(field.label)}: ${sanitizeText(field.value || 'غير متوفر')}` : null
-                        ).filter(item => item !== null);
-                        if (customerItems.length > 0) {
-                            inputSection.appendChild(createSectionElement(pdfData.inputData?.customer?.title || 'بيانات العميل', customerItems, false, true));
-                        }
-
-                        const locationItems = (pdfData.inputData?.location?.fields || []).map(field => 
-                            field.label ? `${sanitizeText(field.label)}: ${sanitizeText(field.value || 'غير متوفر')}` : null
-                        ).filter(item => item !== null);
-                        if (locationItems.length > 0) {
-                            inputSection.appendChild(createSectionElement(pdfData.inputData?.location?.title || 'معلومات الموقع', locationItems, false, true));
-                        }
-
-                        const landItems = (pdfData.inputData?.land?.fields || []).map(field => 
-                            field.label ? `${sanitizeText(field.label)}: ${sanitizeText(field.value || 'غير متوفر')} ${sanitizeText(field.unit || '')}` : null
-                        ).filter(item => item !== null);
-                        if (landItems.length > 0) {
-                            inputSection.appendChild(createSectionElement(pdfData.inputData?.land?.title || 'معلومات الأرض', landItems, false, true));
-                        }
-
-                        const buildingItems = (pdfData.inputData?.building?.fields || []).map(field => 
-                            field.label ? `${sanitizeText(field.label)}: ${sanitizeText(field.value || 'غير متوفر')} ${sanitizeText(field.unit || '')}` : null
-                        ).filter(item => item !== null);
-                        if (buildingItems.length > 0) {
-                            inputSection.appendChild(createSectionElement(pdfData.inputData?.building?.title || 'تفاصيل المبنى', buildingItems, false, true));
-                        }
-
-                        await addSectionToPDF(inputSection, 'بيانات المدخلات');
+                        const inputItems = [];
+                        const addInputSection = (section, title) => {
+                            if (section?.fields?.length > 0) {
+                                inputItems.push(`--- ${sanitizeText(title)} ---`);
+                                section.fields.forEach(field => {
+                                    inputItems.push(`${sanitizeText(field.label)}: ${sanitizeText(field.value)}${field.unit ? ` ${sanitizeText(field.unit)}` : ''}`);
+                                });
+                            }
+                        };
+                        addInputSection(pdfData.inputData?.customer, pdfData.inputData?.customer?.title || 'بيانات العميل');
+                        addInputSection(pdfData.inputData?.location, pdfData.inputData?.location?.title || 'معلومات الموقع');
+                        addInputSection(pdfData.inputData?.land, pdfData.inputData?.land?.title || 'معلومات الأرض');
+                        addInputSection(pdfData.inputData?.building, pdfData.inputData?.building?.title || 'تفاصيل المبنى');
+                        await addSectionToPDF(createSectionElement('بيانات المدخلات', inputItems), 'بيانات المدخلات');
 
                         // 3. الكميات
                         const quantitiesItems = [];
-                        (pdfData.quantities?.sections || []).forEach(section => {
-                            if (section.subtitle) {
-                                quantitiesItems.push([sanitizeText(section.subtitle), '']);
-                            }
-                            (section.items || []).forEach(item => {
-                                if (item.name && item.value !== undefined) {
-                                    quantitiesItems.push([sanitizeText(item.name), `${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`]);
-                                }
+                        pdfData.quantities?.sections?.forEach(section => {
+                            quantitiesItems.push(`--- ${sanitizeText(section.subtitle)} ---`);
+                            section.items.forEach(item => {
+                                quantitiesItems.push(`${sanitizeText(item.name)}: ${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`);
                             });
                         });
-                        await addSectionToPDF(createSectionElement('تفاصيل الكميات الهندسية', quantitiesItems, true), 'تفاصيل الكميات الهندسية');
+                        await addSectionToPDF(createSectionElement('تفاصيل الكميات الهندسية', quantitiesItems), 'تفاصيل الكميات الهندسية');
 
                         // 4. الحسابات الإنشائية
                         const engineeringItems = [];
-                        (pdfData.engineering?.sections || []).forEach(section => {
-                            if (section.subtitle) {
-                                engineeringItems.push([sanitizeText(section.subtitle), '']);
-                            }
-                            (section.items || []).forEach(item => {
-                                if (item.name && item.value !== undefined) {
-                                    engineeringItems.push([sanitizeText(item.name), `${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`]);
-                                }
+                        pdfData.engineering?.sections?.forEach(section => {
+                            engineeringItems.push(`--- ${sanitizeText(section.subtitle)} ---`);
+                            section.items.forEach(item => {
+                                engineeringItems.push(`${sanitizeText(item.name)}: ${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`);
                             });
                         });
-                        await addSectionToPDF(createSectionElement('الحسابات الإنشائية', engineeringItems, true), 'الحسابات الإنشائية');
+                        await addSectionToPDF(createSectionElement('الحسابات الإنشائية', engineeringItems), 'الحسابات الإنشائية');
 
                         // 5. التكاليف
-                        const costItems = (pdfData.costs?.items || []).map(item => 
-                            item.name && item.value !== undefined ? [sanitizeText(item.name), `${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`] : null
-                        ).filter(item => item !== null);
-                        if (pdfData.costs?.total !== undefined) {
-                            costItems.push(['الإجمالي', `${sanitizeText(pdfData.costs.total)} د.ع`]);
+                        const costItems = [];
+                        pdfData.costs?.items?.forEach(item => {
+                            costItems.push(`${sanitizeText(item.name)}: ${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`);
+                        });
+                        if (pdfData.costs?.total) {
+                            costItems.push(`الإجمالي: ${sanitizeText(pdfData.costs.total)} د.ع`);
                         }
-                        await addSectionToPDF(createSectionElement('تفاصيل التكاليف', costItems, true), 'تفاصيل التكاليف');
+                        await addSectionToPDF(createSectionElement('تفاصيل التكاليف', costItems), 'تفاصيل التكاليف');
 
                         // 6. أسعار المواد
-                        const materialItems = (pdfData.materialPrices?.items || []).map(item => 
-                            item.name && item.value !== undefined ? [sanitizeText(item.name), `${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`] : null
-                        ).filter(item => item !== null);
-                        await addSectionToPDF(createSectionElement('أسعار المواد المعتمدة (2025)', materialItems, true), 'أسعار المواد');
+                        const materialItems = [];
+                        pdfData.materialPrices?.items?.forEach(item => {
+                            materialItems.push(`${sanitizeText(item.name)}: ${sanitizeText(item.value)} ${sanitizeText(item.unit || '')}`);
+                        });
+                        await addSectionToPDF(createSectionElement('أسعار المواد المعتمدة (2025)', materialItems), 'أسعار المواد');
 
-                        // إزالة الصفحة الفارغة الأخيرة
-                        const pageCount = doc.internal.getNumberOfPages();
-                        if (pageCount > 0 && !doc.getPageInfo(pageCount).pageContext.hasContent) {
-                            doc.deletePage(pageCount);
+                        // إزالة الصفحة الأولى الفارغة
+                        if (doc.internal.getNumberOfPages() > 0) {
+                            doc.deletePage(1);
                         }
 
                         // إضافة تذييل للترقيم
@@ -1069,8 +1003,8 @@
                         for (let i = 1; i <= finalPageCount; i++) {
                             footerElement.textContent = `صفحة ${i} من ${finalPageCount} | ${sanitizeText(pdfData.companyInfo?.name) || 'غير متوفر'}`;
                             document.body.appendChild(footerElement);
-                            const footerCanvas = await html2canvas(footerElement, { 
-                                scale: 2, 
+                            const footerCanvas = await html2canvas(footerElement, {
+                                scale: 2,
                                 backgroundColor: '#FFF',
                                 scrollX: 0,
                                 scrollY: 0
